--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
     </section>
 
-    <section class="feeds">
+    <section class="feeds scrollable">
       <article ng-repeat="feed in items.feeds"
       ng-class="{read: feed.unreadCount == 0,active: feed.selected}" 
                ng-click="items.selectFeed($index)"
