switch to postgres backend for sessions

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       <h3>Add Feed</h3>
       <label>URL</label>
       <input ng-model="newfeedurl" type="text">
-      <label>Category</label>
+      <label>Tag / Category</label>
       <input ng-model="newfeedcategory" type="text">
     </div>
     <div class="modal-body">
