--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge"> 
 
-  <title>Nyfyk</title>
+  <title ng-bind-template="Nyfyk: {{ pageTitle}}"></title>
   <link href="/static/bootstrap/css/bootstrap.css" rel="stylesheet">
   <link href="/static/fa/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="/static/style.css">
