--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title ng-bind-template="Nyfyk: {{ pageTitle}}"></title>
   <link href="/static/bootstrap/css/bootstrap.css" rel="stylesheet">
+  <link href="/static/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
   <link href="/static/fa/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="/static/style.css">
   <link rel="shortcut icon" href="/static/favicon.png">
@@ -28,48 +30,55 @@
     <div class="navbar navbar-fixed-top no-select" ng-controller="NavBarController">
       <div class="navbar-inner">
         <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
           <a class="brand" data-toggle="modal" href="#modalAbout">
               <i class="icon-rss"></i>
             Nyfyk
           </a>
-          <ul class="nav">
-              <!--
-            <li class="divider-vertical"></li>
-            <li class="itemCount dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                {{items.feeds.length}} Feeds
-                <b class="caret"></b>
-            </a>
-             <ul class="dropdown-menu">
-              <li ng-repeat="feed in items.feeds">
-               <a>
-                 {{feed}}
-               </a>
-              </li>
-             </ul>
-            </li>
-            -->
-            <li class="divider-vertical"></li>
-            <li class="itemCount"><a ng-click="showAll()">{{items.all.length}} Items</a></li>
-            <li class="divider-vertical"></li>
-            <li class="itemCount"><a ng-click="showUnread()">{{items.all.length - items.readCount}} Unread</a></li>
-            <li class="divider-vertical"></li>
-            <li class="itemCount"><a ng-click="showStarred()">{{items.starredCount}} Starred</a></li>
-            <li class="divider-vertical"></li>
-            <li class="itemCount"><a ng-click="showRead()">{{items.readCount}} Read</a></li>
-            <li class="divider-vertical"></li>
-          </ul>
-          <form class="navbar-search pull-left" id="navSearch">
-            <input type="search" ng-model="$parent.search" class="search-query" placeholder="Search">
-          </form>
-          <ul class="nav pull-right" ng-controller="PersonaCtrl">
-            <!--<li><a ng-click="showSettings()"><i class="icon-cog icon-white"></i></a></li>-->
-            <!--
-            <li><a {{action "showUserConfig" on="click"}}><i class="icon-user icon-white"></i></a></li>
-            -->
-            <li ng-hide="verified"><a ng-click="verify()" title="Login" alt="Login">Sign in <i class="icon-angle-right icon-white"></i></a></li>
-            <li ng-show="verified"><a ng-click="logout()" title="You are logged in as {{ email }}" alt="You are logged in as {{ email }}">Log out <i class="icon-angle-right"></i></a></li>
-          </ul>
+          <div class="nav-collapse collapse">
+              <ul class="nav">
+                  <!--
+                <li class="divider-vertical"></li>
+                <li class="itemCount dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                    {{items.feeds.length}} Feeds
+                    <b class="caret"></b>
+                </a>
+                 <ul class="dropdown-menu">
+                  <li ng-repeat="feed in items.feeds">
+                   <a>
+                     {{feed}}
+                   </a>
+                  </li>
+                 </ul>
+                </li>
+                -->
+                <li class="divider-vertical"></li>
+                <li class="itemCount"><a ng-click="showAll()">{{items.all.length}} Items</a></li>
+                <li class="divider-vertical"></li>
+                <li class="itemCount"><a ng-click="showUnread()">{{items.all.length - items.readCount}} Unread</a></li>
+                <li class="divider-vertical"></li>
+                <li class="itemCount"><a ng-click="showStarred()">{{items.starredCount}} Starred</a></li>
+                <li class="divider-vertical"></li>
+                <li class="itemCount"><a ng-click="showRead()">{{items.readCount}} Read</a></li>
+                <li class="divider-vertical"></li>
+              </ul>
+              <form class="navbar-search pull-left" id="navSearch">
+                <input type="search" ng-model="$parent.search" class="search-query" placeholder="Search">
+              </form>
+              <ul class="nav pull-right" ng-controller="PersonaCtrl">
+                <!--<li><a ng-click="showSettings()"><i class="icon-cog icon-white"></i></a></li>-->
+                <!--
+                <li><a {{action "showUserConfig" on="click"}}><i class="icon-user icon-white"></i></a></li>
+                -->
+                <li ng-hide="verified"><a ng-click="verify()" title="Login" alt="Login">Sign in <i class="icon-angle-right icon-white"></i></a></li>
+                <li ng-show="verified"><a ng-click="logout()" title="You are logged in as {{ email }}" alt="You are logged in as {{ email }}">Log out <i class="icon-angle-right"></i></a></li>
+              </ul>
+          </div>
         </div>
       </div>
     </div>
@@ -77,7 +86,7 @@
   </header>
   <section class="mainContent">
 
-    <section class="controls no-select">
+    <section class="controls no-select hidden-phone">
       <div class="tControls">
         <div class="top">
           <button data-toggle="modal" class="btn" href="#modalFeed" title="Add subscription" alt="Add subscription"><i class="icon-plus-sign"></i></button>
@@ -103,7 +112,7 @@
 
     <section class="feeds scrollable">
       <article ng-repeat="feed in items.feeds | filter: search | orderBy:['-unreadCount','feedtitle']"
-      ng-class="{read: feed.unreadCount == 0,active: feed.selected}" 
+      ng-class="{read: feed.unreadCount == 0,active: feed.selected,hidden-phone: feed.unreadCount == 0}" 
                ng-click="items.selectFeed(feed.feedid)"
                class="feed"
                >
@@ -123,7 +132,7 @@
       </article>
     </section>
 
-    <section class="summaries">
+    <section class="summaries hidden-phone">
       <article ng-repeat="item in items.filtered | filter: search"
                id="{{item.id}}"
                ng-class="{read: item.read, active: item.selected}" class="well summary"
